web/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
